Changes for 1.8.0.0
* Created new unitPlacement attribute, "unitDamage", which will let a unit start with bombing factory damage. (veqryn)

* Created new unitPlacement attribute, "hitsTaken", which will let a unit start damaged. (veqryn)

* Deleting game option property, "SBR Affects Unit Production", and simplifying the engine to only use direct unit damage. (veqryn)

* Getting units with different bombing unit damage to not stack. (veqryn)

* Allowing selection of casualties for multiple hit units to allow damage points past one. (veqryn)

* Getting "hitPoints" to work in the graphical user interface. (veqryn)

* Getting "hitPoints" to work on the back end inside the engine. (veqryn)

* Created new unit attachment property, "hitPoints", which sets the number of hitpoints a unit has, and also deleted property "isTwoHit". (veqryn)

* Allowing sounds to be played by trigger, by putting "_sounds" after a duplicate of the Notification message key, with the value equal to the sound key found in the sounds.properties file. (veqryn)

* Added logfile "dump" command for host bots, that will from the command line print out all status, connection, memory, and thread information to the log. (veqryn)

* Created ability for lobby admins to mute and/or boot players in a host bot, remotely. (veqryn)

* Created ability for lobby admins to see the player connections in any host game. (veqryn)

* Created ability for lobby admins to see chatlog of a host bot remotely. (veqryn)

* Adding a new autosave, 'autosave2', which will take turns being saved to with 'autosave'. (veqyrn)

* Changing movement validation to disallow moving from a contested battle territory into an enemy territory. (veqryn)

* Fixed bug with a territory owned by one player but having enemy units in it, if the owned reconquers the territory it is no longer marked as newly-conquered. (veqryn)
